dataset1235/2025-2/805158916/users/3920620008/executions/2118643220_3348296077.log
== SUBMISSION (2025-09-01 14:13:46)
-- CODE: 
TE = int( input(" Tempo no estacionamneto"))
Taxa = TE* 15
TF= 5.00
ICMS = (Taxa + TF)*(20/100)
V = (Taxa + TF + ICMS)
print(round(V,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
---- user output:
Tempo no estacionamneto24.0
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
---- user output:
Tempo no estacionamneto132.0
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
---- user output:
Tempo no estacionamneto168.0
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
---- user output:
Tempo no estacionamneto60.0
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
---- user output:
Tempo no estacionamneto96.0
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
---- user output:
Tempo no estacionamneto456.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:11:51)
-- CODE: 
TE = int( input(" Tempo no estacionamneto"))
Taxa = (Te* 15)
TF= 5.00
ICMS (Taxa + TF)*(20/100)
V = (TAXA + TF + ICMS)
 print(round(V , 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
-- ERROR:
File "XXXX", line 6
    print(round(V , 2))
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
-- ERROR:
File "XXXX", line 6
    print(round(V , 2))
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
-- ERROR:
File "XXXX", line 6
    print(round(V , 2))
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
-- ERROR:
File "XXXX", line 6
    print(round(V , 2))
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
-- ERROR:
File "XXXX", line 6
    print(round(V , 2))
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
-- ERROR:
File "XXXX", line 6
    print(round(V , 2))
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:10:59)
-- CODE: 
TE = int( input(" Tempo no estacionamneto"))
Taxa = (Te* 15)
TF= 5.00
ICMS (Taxa + TF)*(20/100)
V = (TAXA + TF + ICMS)
 print(round(V, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
-- ERROR:
File "XXXX", line 6
    print(round(V, 2))
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
-- ERROR:
File "XXXX", line 6
    print(round(V, 2))
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
-- ERROR:
File "XXXX", line 6
    print(round(V, 2))
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
-- ERROR:
File "XXXX", line 6
    print(round(V, 2))
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
-- ERROR:
File "XXXX", line 6
    print(round(V, 2))
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
-- ERROR:
File "XXXX", line 6
    print(round(V, 2))
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:05:45)
-- CODE: 
TE = int( input(" Tempo no estacionamneto"))
Taxa = (Te* 15)
TF= 5.00
ICMS ( Taxa + TF)*(20/100)
V = (TAXA + TF + ICMS)
 print(round(V ,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
24.0
-- ERROR:
File "XXXX", line 6
    print(round(V ,2))
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
7
---- correct output:
132.0
-- ERROR:
File "XXXX", line 6
    print(round(V ,2))
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
9
---- correct output:
168.0
-- ERROR:
File "XXXX", line 6
    print(round(V ,2))
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
3
---- correct output:
60.0
-- ERROR:
File "XXXX", line 6
    print(round(V ,2))
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
5
---- correct output:
96.0
-- ERROR:
File "XXXX", line 6
    print(round(V ,2))
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
25
---- correct output:
456.0
-- ERROR:
File "XXXX", line 6
    print(round(V ,2))
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
